[package]
name = "polytype"
version = "0.1.0"
edition = "2021"
description = "Layout-agnostic terminal typing trainer"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
rand = "0.8"
thiserror = "1"

[[bin]]
name = "polytype"
path = "src/main.rs"

[lib]
name = "polytype"
path = "src/lib.rs"
